[package]
name = "bopus"
version = "0.1.0"
authors = ["Zen <true.grenight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
execute = "0.2.8"
regex = "1.4.3"
threadpool = "1.8.1"
num_cpus = "1.13.0"
rayon = "1.5"
which = "4.0.2"
anyhow = "1.0.38"
