[package]
name = "bopus"
version = "0.3.0"
authors = ["Zen <master_of_zen@protonmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
execute = "0.2.8"
regex = "1.4.3"
threadpool = "1.8.1"
num_cpus = "1.13.0"
rayon = "1.5"
which = "4.0.2"
anyhow = "1.0.38"
log = "0.4.14"
simplelog = "0.9.0"
lazy_static = "1.4.0"
