[package]
name = "bopus"
version = "0.3.0"
authors = ["Zen <master_of_zen@protonmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.*"
execute = "0.*"
regex = "1.*"
threadpool = "1.*"
num_cpus = "1.*"
rayon = "1.*"
which = "4.*"
anyhow = "1.*"
log = "0.*"
simplelog = "0.*"
lazy_static = "1.*"
